// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question component Answer buttons is not disabled if current question has already been answered 1`] = `
<body>
  <div>
    <div>
      <div
        class="sc-grXZZQ lakGlY question col gap-7 rounded-lg p-6"
        data-testid="question-container"
      >
        <div
          class="flex justify-between items-center"
        >
          <h1
            class="text-xl"
          >
            Mock Category
          </h1>
          <p
            class="text-xl"
            style="color: green;"
          >
            easy
          </p>
        </div>
        <h1
          class="text-2xl"
        >
          Mock &lt;Question&gt;
        </h1>
        <svg
          data-testid="timer-container"
          style="border: 2px solid green; border-radius: 5px;"
          viewBox="0 0 100 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            class="transition-all"
            stroke="green"
            stroke-width="20"
            x1="0"
            x2="0"
            y1="5"
            y2="5"
          />
          30
        </svg>
        <div
          class="question_options grid grid-cols-2 grid-rows-2 gap-4"
        >
          <span
            data-testid="Mocha & Chai"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              id="Mocha & Chai"
            >
              <span
                data-testid="feedback-incorrect-0"
              />
              <p>
                Mocha & Chai
              </p>
            </button>
          </span>
          <span
            data-testid="React | Vue | Angular"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              id="React | Vue | Angular"
            >
              <span
                data-testid="feedback-incorrect-1"
              />
              <p>
                React | Vue | Angular
              </p>
            </button>
          </span>
          <span
            data-testid="Mock Aswer 3"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              id="Mock Aswer 3"
            >
              <span
                data-testid="feedback-incorrect-2"
              />
              <p>
                Mock Aswer 3
              </p>
            </button>
          </span>
          <span
            data-testid="Mock Correct Answer"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              id="Mock Correct Answer"
            >
              <span
                data-testid="feedback-correct-3"
              />
              <p>
                Mock Correct Answer
              </p>
            </button>
          </span>
        </div>
        <span
          data-testid="continue-later-button"
        >
          <button
            class="sc-bcPKhP fVQoNj w-full"
          >
            Continue Later
          </button>
        </span>
        <audio
          id="success"
        >
          <source
            src="/success.mp3"
            type="audio/mpeg"
          />
          Your browser does not support the audio element.
        </audio>
        <audio
          id="error"
        >
          <source
            src="/error.mp3"
            type="audio/mpeg"
          />
          Your browser does not support the audio element.
        </audio>
      </div>
    </div>
  </div>
</body>
`;

exports[`Question component Disables answer buttons if current question has already been answered 1`] = `
<body>
  <div>
    <div>
      <div
        class="sc-grXZZQ lakGlY question col gap-7 rounded-lg p-6 sc-grXZZQ lakGlY"
        data-testid="question-container"
      >
        <div
          class="flex justify-between items-center"
        >
          <h1
            class="text-xl"
          >
            Mock Category
          </h1>
          <p
            class="text-xl"
            style="color: green;"
          >
            easy
          </p>
        </div>
        <h1
          class="text-2xl"
        >
          Mock &lt;Question&gt;
        </h1>
        <svg
          data-testid="timer-container"
          style="border: 2px solid green; border-radius: 5px;"
          viewBox="0 0 100 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            class="transition-all"
            stroke="green"
            stroke-width="20"
            x1="0"
            x2="0"
            y1="5"
            y2="5"
          />
          30
        </svg>
        <div
          class="question_options grid grid-cols-2 grid-rows-2 gap-4"
        >
          <span
            data-testid="Mocha & Chai"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              disabled=""
              id="Mocha & Chai"
            >
              <span
                data-testid="feedback-incorrect-0"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </span>
              <p>
                Mocha & Chai
              </p>
            </button>
          </span>
          <span
            data-testid="React | Vue | Angular"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              disabled=""
              id="React | Vue | Angular"
            >
              <span
                data-testid="feedback-incorrect-1"
              />
              <p>
                React | Vue | Angular
              </p>
            </button>
          </span>
          <span
            data-testid="Mock Aswer 3"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              disabled=""
              id="Mock Aswer 3"
            >
              <span
                data-testid="feedback-incorrect-2"
              />
              <p>
                Mock Aswer 3
              </p>
            </button>
          </span>
          <span
            data-testid="Mock Correct Answer"
          >
            <button
              class="sc-bcPKhP jLmHOz flex w-full justify-center gap-2 items-center animate__animated"
              disabled=""
              id="Mock Correct Answer"
              style="--animate-duration: 1s;"
            >
              <span
                data-testid="feedback-correct-3"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </span>
              <p>
                Mock Correct Answer
              </p>
            </button>
          </span>
        </div>
        <span
          data-testid="continue-later-button"
        >
          <button
            class="sc-bcPKhP fVQoNj w-full"
          >
            Continue Later
          </button>
        </span>
        <span>
          <button
            class="sc-bcPKhP jLmHOz w-full"
          >
            Next Question
          </button>
        </span>
        <audio
          id="success"
        >
          <source
            src="/success.mp3"
            type="audio/mpeg"
          />
          Your browser does not support the audio element.
        </audio>
        <audio
          id="error"
        >
          <source
            src="/error.mp3"
            type="audio/mpeg"
          />
          Your browser does not support the audio element.
        </audio>
      </div>
    </div>
  </div>
</body>
`;

exports[`Question component snapshot matches 1`] = `
<body>
  <div>
    <div>
      <div
        class="sc-grXZZQ lakGlY question col gap-7 rounded-lg p-6"
        data-testid="question-container"
      >
        <div
          class="flex justify-between items-center"
        >
          <h1
            class="text-xl"
          >
            Mock Category
          </h1>
          <p
            class="text-xl"
            style="color: green;"
          >
            easy
          </p>
        </div>
        <h1
          class="text-2xl"
        >
          Mock &lt;Question&gt;
        </h1>
        <svg
          data-testid="timer-container"
          style="border: 2px solid green; border-radius: 5px;"
          viewBox="0 0 100 5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            class="transition-all"
            stroke="green"
            stroke-width="20"
            x1="0"
            x2="0"
            y1="5"
            y2="5"
          />
          30
        </svg>
        <div
          class="question_options grid grid-cols-2 grid-rows-2 gap-4"
        >
          <span
            data-testid="Mocha & Chai"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              id="Mocha & Chai"
            >
              <span
                data-testid="feedback-incorrect-0"
              />
              <p>
                Mocha & Chai
              </p>
            </button>
          </span>
          <span
            data-testid="React | Vue | Angular"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              id="React | Vue | Angular"
            >
              <span
                data-testid="feedback-incorrect-1"
              />
              <p>
                React | Vue | Angular
              </p>
            </button>
          </span>
          <span
            data-testid="Mock Aswer 3"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              id="Mock Aswer 3"
            >
              <span
                data-testid="feedback-incorrect-2"
              />
              <p>
                Mock Aswer 3
              </p>
            </button>
          </span>
          <span
            data-testid="Mock Correct Answer"
          >
            <button
              class="sc-bcPKhP fVQoNj flex w-full justify-center gap-2 items-center animate__animated"
              id="Mock Correct Answer"
            >
              <span
                data-testid="feedback-correct-3"
              />
              <p>
                Mock Correct Answer
              </p>
            </button>
          </span>
        </div>
        <span
          data-testid="continue-later-button"
        >
          <button
            class="sc-bcPKhP fVQoNj w-full"
          >
            Continue Later
          </button>
        </span>
        <audio
          id="success"
        >
          <source
            src="/success.mp3"
            type="audio/mpeg"
          />
          Your browser does not support the audio element.
        </audio>
        <audio
          id="error"
        >
          <source
            src="/error.mp3"
            type="audio/mpeg"
          />
          Your browser does not support the audio element.
        </audio>
      </div>
    </div>
  </div>
</body>
`;
